// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toFriendly returns the correct string when not safe 1`] = `
"Regex is not safe. There could be infinite backtracks in the worse case. The following trail shows how the same input can be matched multiple ways.

3: \`a\` | 1: \`a\`
===============
Hit maximum number of steps so there may be more results than shown here.
Note there may be more results than shown here as some infinite loops are detected and removed."
`;

exports[`toFriendly returns the correct string when not safe 2`] = `
"Regex is not safe. There could be infinite backtracks in the worse case. The following trail shows how the same input can be matched multiple ways.

3: \`a\` | 1: \`a\`
===============
Timed out so there may be more results than shown here.
Note there may be more results than shown here as some infinite loops are detected and removed."
`;

exports[`toFriendly returns the correct string when not safe 3`] = `
"Regex is not safe. There could be infinite backtracks in the worse case. The following trail shows how the same input can be matched multiple ways.

3: \`a\` | 1: \`a\`
===============
Hit maxiumum number of backtracks so there may be more results than shown here.
Note there may be more results than shown here as some infinite loops are detected and removed."
`;

exports[`toFriendly returns the correct string when not safe 4`] = `
"Regex is not safe. There could be 1 backtrack in the worse case. The following trail shows how the same input can be matched multiple ways.

3: \`a\` | 1: \`a\`
===============
Hit maxiumum number of backtracks so there may be more results than shown here.
Note there may be more results than shown here as some infinite loops are detected and removed."
`;

exports[`toFriendly returns the correct string when not safe 5`] = `
"Regex is not safe. There could be 2 backtracks in the worse case. The following trail shows how the same input can be matched multiple ways.

3: \`a\` | 1: \`a\`
===============
Hit maxiumum number of backtracks so there may be more results than shown here.
Note there may be more results than shown here as some infinite loops are detected and removed."
`;

exports[`toFriendly returns the correct string when not safe 6`] = `
"Pattern was downgraded to \`pattern\`.
Regex is not safe. There could be infinite backtracks in the worse case. The following trail shows how the same input can be matched multiple ways.

3: \`a\` | 1: \`a\`
===============
Hit maximum number of steps so there may be more results than shown here.
Note there may be more results than shown here as some infinite loops are detected and removed."
`;

exports[`toFriendly returns the correct string when not safe but no trails 1`] = `"Regex may not be safe. Reached steps limit. The pattern may have too many variations."`;

exports[`toFriendly returns the correct string when not safe but no trails 2`] = `"Regex may not be safe. Timed out. The pattern may have too many variations."`;

exports[`toFriendly returns the correct string when not safe but no trails 3`] = `"Regex may not be safe. Stack overflow. The pattern may have too many variations."`;

exports[`toFriendly returns the correct string when safe 1`] = `"Regex is safe."`;
